# vokey

./: .gitignore  CMakeLists.txt  README.md  default_profile.json  linux_install.sh  linux_uninstall.sh  makefile  version
.github/workflows/: cmake.yml
concepts/: structure.xopp
desktop/: Vokey Manager.desktop
sounds/lmms/: listening_begin.mmpz  listening_end.mmpz
source/: Action.cpp  Action.h  VoiceRecognizer.cpp  VoiceRecognizer.h  Vokey.cpp  vokey.cpp
source/common/: Common.h  Communication.h  Config.h  Profile.h  common.h  communication.h  config.h
source/manager/: VokeyManager.cpp
source/manager/ui/: _ui.txt
source/service/: Action.cpp  Action.h  Candy.h  EventRecognizer.cpp  EventRecognizer.h  VoiceRecognizer.cpp  VoiceRecognizer.h  VokeyService.cpp
ui/: about.ui  manager.ui
